--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -5,8 +5,10 @@ spring.application.name=demo
 server.port=8081
 #test.hello=hello
 # 增加数据库连接
-spring.datasource.url=jdbc:mysql://localhost:3306/wiki
+spring.datasource.url=jdbc:mysql://localhost:3306/wiki?serverTimezone=Asia/Shanghai
 spring.datasource.username=wiki
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# 配置mybatis所有Mapper.xml所在的路径
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
