--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=demo
 
 # 应用服务 WEB 访问端口
-server.port=8081
+server.port=8888
 #test.hello=hello
 # 增加数据库连接
 spring.datasource.url=jdbc:mysql://localhost:3306/wiki?serverTimezone=Asia/Shanghai
@@ -11,4 +11,6 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 配置mybatis所有Mapper.xml所在的路径
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
+# 打印所有的sql日志：sql, 参数, 结果
+logging.level.com.example.mapper=trace
 
